[package]
name = "ninesleep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cbor = "0.4.1"
chrono = { version = "0.4.33", features = ["serde"] }
ciborium = "0.2.2"
env_logger = "0.11.0"
hex = "0.4.3"
log = "0.4"
rocket = {version = "0.5.0", features = ["json"] }
rustc-serialize = "0.3.25"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.14"
